--- a/rapport.tex
+++ b/rapport.tex
@@ -30,7 +30,7 @@
     Using Market and Macro Data}}\\[1.5cm]
 
     {\large Authors: COSMANO, DAVROUX, ETHEVE}\\[0.5cm]
-    {\large Date: \tomorrow}\\[2cm]
+    {\large Date: \today}\\[2cm]
 
     \vfill
 \end{titlepage}
